initial movement for miyamoto.

--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -5,7 +5,7 @@
 		"position": [0.0,0.0,10.0]
 	},
 	"character": {
-		"_addr": "0E13B6A0",
+		"_addr": "054099D8",
 		"current_frame": "normal",
 		"custom": 1,
 		"is_human": 1,
@@ -37,13 +37,13 @@
 ,
 ,
 ,
-,,,,dbr,dbr,,,,,,,,,,,dbr,dbr
-,,,,dbr,dbr,,,,,,,dbr,dbr,,,dbr,dbr,dbr
-,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr
-,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr
-,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr
-,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr
 ,
+,
+,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
+,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr
+,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr
+,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr
+,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr
 ,
 ,",
 		"unique_tiles": ",dbr,dgr",
