--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -4,6 +4,18 @@
 	hitpoints: 4,
 	zorder: 1,
 	editor_info: { category: "player" },
+	on_process:"[
+		if(ctrl_right, [
+			set(facing,1),
+			set(animation, 'walk'),
+			set(velocity_x, 300)]), 
+		if(ctrl_left, [
+			set(facing,-1),
+			set(animation, 'walk'),
+			set(velocity_x, -300)]), 
+		if(not(ctrl_left or ctrl_right),
+			[set(animation, 'stand')]),
+			]",
 	animation: [
 		{
 		id: "stand",
@@ -12,6 +24,7 @@
 		frames:1,
 		frames_per_row: 1,
 		solid_area: [20,32,10,5],
+		velocity_x: 0,
 		},	
 		{
 		id: "walk",
@@ -20,7 +33,7 @@
 		frames:2,
 		pad: 3,
 		frames_per_row: 2,
-		duration: 10,
+		duration: 2,
 		solid_area: [20,32,10,5],
 		},
 		{
