Started working on Miyamoto's jumping.

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -7,52 +7,57 @@
 	on_process:"[
 		if(ctrl_right, [
 			set(facing,1),
-			set(animation, 'walk'),
+			if (animation != 'walk', set(animation, 'walk')), //'set animation' will set to frame 1, so keep in mind when activating this on command
 			set(velocity_x, 300)]), 
 		if(ctrl_left, [
 			set(facing,-1),
-			set(animation, 'walk'),
+			if (animation != 'walk', set(animation, 'walk')), 
 			set(velocity_x, -300)]), 
 		if(not(ctrl_left or ctrl_right),
 			[set(animation, 'stand')]),
+		//-------------------------------JUMPING---------------------------------	
+		if(ctrl_jump and is_standing, [
+			add(velocity_y, -1350),
+			]),
 			]",
+			
+	on_end_anim:"set(animation,animation)", 
+	
+	
 	animation: [
 		{
-		id: "stand",
+		"@base": true,
 		image: "playable/miyamoto-sheet.png",
+		accel_y: 80,
+		solid_area: [20,32,10,5],
+		pad: 3,
+		},
+		{
+		id: "stand",
 		rect: [1,1,32,33],
 		frames:1,
 		frames_per_row: 1,
-		solid_area: [20,32,10,5],
 		velocity_x: 0,
+		
 		},	
 		{
 		id: "walk",
-		image: "playable/miyamoto-sheet.png",
 		rect: [1,37,32,69],
 		frames:2,
-		pad: 3,
 		frames_per_row: 2,
-		duration: 2,
-		solid_area: [20,32,10,5],
+		duration: 10,
 		},
 		{
 		id: "jump",
-		image: "playable/miyamoto-sheet.png",
 		rect: [36,1,67,33],
 		frames:1,
-		pad: 3,
 		frames_per_row: 1,
-		solid_area: [20,32,10,5],
 		},
 		{
 		id: "punch1",
-		image: "playable/miyamoto-sheet.png",
 		rect: [1,73,32,105],
 		frames:1,
-		pad: 3,
 		frames_per_row: 1,
-		solid_area: [20,32,10,5],
 		},
 	],
 }
