--- a/data/tiles/tiles-docks.cfg
+++ b/data/tiles/tiles-docks.cfg
@@ -11,7 +11,7 @@ tile_pattern: [
 	},
 	{
 		image: "tiles/tiles-docks.png", //Left corner
-		//solid: true,
+		solid: true,
 		tiles: "00",
 		pattern: ".*   ,   .*  ,   .*  , 
 			  !(dgr)   , (dgr) ,  (dgr)  ,
@@ -19,7 +19,7 @@ tile_pattern: [
 	},
 	{
 		image: "tiles/tiles-docks.png", //Right corner
-		//solid: true,
+		solid: true,
 		tiles: "02",
 		pattern: ".*   ,   .*  ,   .*  , 
 				 (dgr) , (dgr) ,   !(dgr)  ,
@@ -27,7 +27,7 @@ tile_pattern: [
 	},
 	{
 		image: "tiles/tiles-docks.png",  //Middle
-		//solid: true,
+		solid: true,
 		tiles: "01",
 		pattern: ".*   ,   .*  ,   .*  , 
 			   (dgr)   , (dgr) ,  (dgr)  ,
@@ -35,7 +35,7 @@ tile_pattern: [
 	},
 	{
 		image: "tiles/tiles-docks.png",
-		//solid: true,
+		solid: true,
 		tiles: "01",
 		pattern: ".*   ,   .*  ,   .*  , 
 				  .*   , (dgr) ,   .*  ,
