Made the jump more Castlevania-y.

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -5,18 +5,19 @@
 	zorder: 1,
 	editor_info: { category: "player" },
 	on_process:"[
-		if(ctrl_right, [
+		if(ctrl_right and is_standing, [
 			set(facing,1),
-			if (animation != 'walk', set(animation, 'walk')), //'set animation' will set to frame 1, so keep in mind when activating this on command
+			if (animation != 'walk', set(animation, 'walk')), //'set animation' will set on every frame, so keep in mind when activating this on command
 			set(velocity_x, 300)]), 
-		if(ctrl_left, [
+		if(ctrl_left and is_standing, [
 			set(facing,-1),
 			if (animation != 'walk', set(animation, 'walk')), 
 			set(velocity_x, -300)]), 
-		if(not(ctrl_left or ctrl_right),
+		if((not(ctrl_left or ctrl_right))and(is_standing),
 			[set(animation, 'stand')]),
 		//-------------------------------JUMPING---------------------------------	
 		if(ctrl_jump and is_standing, [
+			if (animation != 'jump', set(animation, 'jump')),
 			add(velocity_y, -1350),
 			]),
 			]",
