Miyamoto learned martial arts and can punch now.

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -5,7 +5,15 @@
 	hitpoints: 4,
 	zorder: 1,
 	editor_info: { category: "player" },
+	
+	properties:{
+		last_punched: {
+		type:"int",
+		default: 0,
+		},
+	},
 	on_process:"[
+		//------------------------------WALKING----------------------------------
 		if(ctrl_right and is_standing, [
 			set(facing,1),
 			if (animation != 'walk', set(animation, 'walk')), //'set animation' will set on every frame, so keep in mind when activating this on command
@@ -14,16 +22,22 @@
 			set(facing,-1),
 			if (animation != 'walk', set(animation, 'walk')), 
 			set(velocity_x, -300)]), 
-		if((not(ctrl_left or ctrl_right))and(is_standing),
+		if((not(ctrl_left or ctrl_right))and(is_standing)and(not animation in ['punch1']),
 			[set(animation, 'stand')]),
 		//-------------------------------JUMPING---------------------------------	
 		if(ctrl_jump and is_standing, [
 			if (animation != 'jump', set(animation, 'jump')),
 			add(velocity_y, -1350),
 			]),
+		//-------------------------------ATTACKING------------------------------
+		if(ctrl_tongue and animation != 'punch1', 
+			if(cycle - last_punched > 25,
+				[set(animation, 'punch1'),
+				set(last_punched, dump(cycle)),
+			])),
 			]",
 			
-	on_end_anim:"set(animation,animation)", 
+	on_end_anim:"if(animation='punch1',if(is_standing, set(animation,'stand'),set(animation,'jump')),set(animation,animation))", 
 	
 	
 	animation: [
@@ -60,6 +74,7 @@
 		rect: [1,73,32,105],
 		frames:1,
 		frames_per_row: 1,
+		duration: 10,
 		},
 	],
 }
