Miyamoto is now Simon Brown (updated punching to behave more like Castlevania.)

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -11,28 +11,30 @@
 		type:"int",
 		default: 0,
 		},
+		punch_finished:"cycle - last_punched > 16",
 	},
 	on_process:"[
 		//------------------------------WALKING----------------------------------
-		if(ctrl_right and is_standing, [
+		if(ctrl_right and is_standing and punch_finished, [
 			set(facing,1),
 			if (animation != 'walk', set(animation, 'walk')), //'set animation' will set on every frame, so keep in mind when activating this on command
 			set(velocity_x, 300)]), 
-		if(ctrl_left and is_standing, [
+		if(ctrl_left and is_standing and punch_finished, [
 			set(facing,-1),
 			if (animation != 'walk', set(animation, 'walk')), 
 			set(velocity_x, -300)]), 
 		if((not(ctrl_left or ctrl_right))and(is_standing)and(not animation in ['punch1']),
 			[set(animation, 'stand')]),
 		//-------------------------------JUMPING---------------------------------	
-		if(ctrl_jump and is_standing, [
+		if(ctrl_jump and is_standing and punch_finished, [
 			if (animation != 'jump', set(animation, 'jump')),
 			add(velocity_y, -1350),
 			]),
 		//-------------------------------ATTACKING------------------------------
-		if(ctrl_tongue and animation != 'punch1', 
-			if(cycle - last_punched > 25,
+		if(ctrl_tongue and animation != 'punch1' and is_standing, 
+			if(punch_finished,
 				[set(animation, 'punch1'),
+				set(velocity_x,0),
 				set(last_punched, dump(cycle)),
 			])),
 			]",
@@ -54,7 +56,6 @@
 		frames:1,
 		frames_per_row: 1,
 		velocity_x: 0,
-		
 		},	
 		{
 		id: "walk",
@@ -74,7 +75,7 @@
 		rect: [1,73,32,105],
 		frames:1,
 		frames_per_row: 1,
-		duration: 10,
+		duration: 6,
 		},
 	],
 }
