gave Miyamoto a flashy punch projectile. It does nothing.

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -34,6 +34,7 @@
 		if(ctrl_tongue and animation != 'punch1' and is_standing, 
 			if(punch_finished,
 				[set(animation, 'punch1'),
+				spawn('miyamoto_playable.punch_proj',mid_x+5*facing,mid_y-11,{facing:facing,velocity_x:1000*facing}),
 				set(velocity_x,0),
 				set(last_punched, dump(cycle)),
 			])),
@@ -78,4 +79,14 @@
 		duration: 6,
 		},
 	],
+	object_type: [{
+		id:"punch_proj",
+		on_create:"schedule(4,die())",
+		animation: [{
+			id:"normal",
+			image: "playable/miyamoto-sheet.png",
+			rect: [1,109,10,118],	
+			}]
+		}
+	]
 }
