Miyamoto no longer attacks while moving.

--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -5,7 +5,7 @@
 		"position": [0.0,0.0,10.0]
 	},
 	"character": {
-		"_addr": "093C9A68",
+		"_addr": "08D33B38",
 		"current_frame": "normal",
 		"custom": 1,
 		"is_human": 1,
@@ -35,15 +35,15 @@
 ,
 ,
 ,
-,
-,
-,
-,
-,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
-,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr
-,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr
-,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr
-,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr
+dgr,,,,,,,,,,,,,,,,,,,,,,,,dgr
+dgr,,,,,,,,,,,,,dgr,,,,,,,,,,,dgr
+dgr,,,,,dgr,,,,,,,,dgr,,,,,,,dgr,,,,dgr
+dgr,,,,,dgr,,,,,,,,dgr,,,dgr,,,,dgr,,,,dgr
+dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr
+dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr
 ,
 ,",
 		"unique_tiles": ",dbr,dgr",
