--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -23,31 +23,32 @@
 			set(facing,-1),
 			if (animation != 'walk', set(animation, 'walk')), 
 			set(velocity_x, -300)]), 
-		if((not(ctrl_left or ctrl_right))and(is_standing)and(not animation in ['punch1']),
+		if((not(ctrl_left or ctrl_right))and(is_standing)and(not animation in ['punch1']), //allows a list of excluded animations
 			[set(animation, 'stand')]),
 		//-------------------------------JUMPING---------------------------------	
-		if(ctrl_jump and is_standing and punch_finished, [
+		if(ctrl_jump and is_standing and punch_finished, [  //check the animation changing back to 'walk' or 'stand' on jumping at a ledge and continuing to jump without the proper animation. 
 			if (animation != 'jump', set(animation, 'jump')),
-			add(velocity_y, -1350),
+			set(velocity_y, -900), //work on Miyamoto falling straight down upon walking off of an edge.
+			//add some x velocity to increase jump distance.
 			]),
-		//-------------------------------ATTACKING------------------------------
+		//-------------------------------ATTACKING-------------------------------
 		if(ctrl_tongue and animation != 'punch1' and is_standing, 
 			if(punch_finished,
 				[set(animation, 'punch1'),
 				spawn('miyamoto_playable.punch_proj',mid_x+5*facing,mid_y-11,{facing:facing,velocity_x:1000*facing}),
 				set(velocity_x,0),
-				set(last_punched, dump(cycle)),
+				set(last_punched, dump(cycle)), //make it so that the player must press the attack button instead of holding it to repeat punching
 			])),
 			]",
 			
-	on_end_anim:"if(animation='punch1',if(is_standing, set(animation,'stand'),set(animation,'jump')),set(animation,animation))", 
+	on_end_anim:"if(animation='punch1',if(is_standing, set(animation,'stand'),set(animation,'jump')),set(animation,animation))", //continues the animation
 	
 	
 	animation: [
 		{
 		"@base": true,
 		image: "playable/miyamoto-sheet.png",
-		accel_y: 80,
+		accel_y: 40,
 		solid_area: [20,32,10,5],
 		pad: 3,
 		},
@@ -85,7 +86,8 @@
 		animation: [{
 			id:"normal",
 			image: "playable/miyamoto-sheet.png",
-			rect: [1,109,10,118],	
+			rect: [1,109,10,118],
+			attack_area: "all", 	
 			}]
 		}
 	]
