Changed screen resolution for the module.

--- a/module.cfg
+++ b/module.cfg
@@ -1,5 +1,10 @@
 {
 	"id": "miyamotobrown",
 	"min_engine_version": 1.4,
-	"name": "Miyamoto Brown"
+	"name": "Miyamoto Brown",
+	arguments: [
+		"--width=512",
+		"--height=480",
+	],
+
 }
