Updated attack frames.

--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -1,11 +1,8 @@
 {
 	"air_resistance": 20,
 	"auto_move_camera": [0,0],
-	"camera": {
-		"position": [0.0,0.0,10.0]
-	},
 	"character": {
-		"_addr": "08D33B38",
+		"_addr": "0000000003F1A490",
 		"current_frame": "normal",
 		"custom": 1,
 		"is_human": 1,
@@ -15,8 +12,7 @@
 		"y": 0,
 		"zorder": 0
 	},
-	"dimensions": [0,0,799,599],
-	"gui": "null",
+	"dimensions": [0,0,1983,599],
 	"id": "titlescreen.cfg",
 	"music": "",
 	"preloads": "",
@@ -30,25 +26,25 @@
 		"tiles": ",
 ,
 ,
-,
-,
-,
-,
-,
-dgr,,,,,,,,,,,,,,,,,,,,,,,,dgr
-dgr,,,,,,,,,,,,,dgr,,,,,,,,,,,dgr
-dgr,,,,,dgr,,,,,,,,dgr,,,,,,,dgr,,,,dgr
-dgr,,,,,dgr,,,,,,,,dgr,,,dgr,,,,dgr,,,,dgr
-dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
-dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr
-dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr
-dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr
-dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr
-,
+,,dbr
+,,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,,,,dbr,dbr,dbr,dbr,,,,dbr,dbr,,dbr,,,,dbr,,,,,dbr,dbr,dbr,,dbr,dbr,dbr,dbr,,dbr,dbr,dbr
+,,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,dbr,dgr,,,,,,,,,,,,,dgr,,,,,,,,,,,dgr,dgr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,dbr,dgr,,,,,dgr,,,,,,,,dgr,,,,,,,dgr,,,,dgr,dgr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,dbr,dgr,,,,,dgr,,,,,,,,dgr,,,dgr,,,,dgr,,,,dgr,dgr,dgr,dgr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,dbr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
+,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
+,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
+,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
+,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
+,,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
 ,",
 		"unique_tiles": ",dbr,dgr",
 		"variations": "",
-		"x": 0,
+		"x": -96,
 		"x_speed": 100,
 		"y": 0,
 		"y_speed": 100,
