--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -15,20 +15,29 @@
 	},
 	on_process:"[
 		//------------------------------WALKING----------------------------------
-		if(ctrl_right and is_standing and punch_finished, [
+		if(ctrl_right and is_standing and punch_finished and animation != 'crouch', [
 			set(facing,1),
 			if (animation != 'walk', set(animation, 'walk')), //'set animation' will set on every frame, so keep in mind when activating this on command
 			set(velocity_x, 300)]), 
-		if(ctrl_left and is_standing and punch_finished, [
+		if(ctrl_left and is_standing and punch_finished and animation != 'crouch',[
 			set(facing,-1),
 			if (animation != 'walk', set(animation, 'walk')), 
 			set(velocity_x, -300)]), 
 		if((not(ctrl_left or ctrl_right))and(is_standing)and(not animation in ['punch1']), //allows a list of excluded animations
 			[set(animation, 'stand')]),
-		//-------------------------------JUMPING---------------------------------	
-		if(ctrl_jump and is_standing and punch_finished, [  //check the animation changing back to 'walk' or 'stand' on jumping at a ledge and continuing to jump without the proper animation. 
+			
+		//-------------------------------CROUCHING-------------------------------
+		if ((ctrl_down and self.animation in ['stand','crouch','walk']), 
+	[
+			set(animation, 'crouch'),
+			set(velocity_x, 0)]),	
+		if ((ctrl_left and self.animation='crouch'),[ set(facing,-1)]),
+		
+		if ((ctrl_right and self.animation='crouch'),[ set(facing,1)]),
+//-------------------------------JUMPING---------------------------------			
+			if(ctrl_jump and is_standing and punch_finished, [  //check the animation changing back to 'walk' or 'stand' on jumping at a ledge and continuing to jump without the proper animation. 
 			if (animation != 'jump', set(animation, 'jump')),
-			set(velocity_y, -900), //work on Miyamoto falling straight down upon walking off of an edge.
+			set(velocity_y, -1000), //work on Miyamoto falling straight down upon walking off of an edge.
 			//add some x velocity to increase jump distance.
 			]),
 		//-------------------------------ATTACKING-------------------------------
@@ -39,10 +48,12 @@
 				set(velocity_x,0),
 				set(last_punched, dump(cycle)), //make it so that the player must press the attack button instead of holding it to repeat punching
 			])),
-			]",
-			
-	on_end_anim:"if(animation='punch1',if(is_standing, set(animation,'stand'),set(animation,'jump')),set(animation,animation))", //continues the animation
-	
+	]",
+
+
+on_end_anim:"if(animation='punch1',if(is_standing, set(animation,'stand'),set(animation,'jump'), set(animation, 'crouch')),set(animation,animation))", //continues the animation
+on_end_crouch_anim:"if(not(ctrl_down),set(animation,'stand'))",
+on_end_enter_jump_anim:"set(animation,'jump')",
 	
 	animation: [
 		{
@@ -62,13 +73,25 @@
 		{
 		id: "walk",
 		rect: [1,37,32,69],
-		frames:2,
-		frames_per_row: 2,
-		duration: 10,
+		frames:4,
+		frames_per_row: 4,
+		duration: 12,
+		},
+		{
+		id: "enter_jump",
+		rect: [36,1,67,33],
+		frames:1,
+		frames_per_row: 1,
 		},
 		{
 		id: "jump",
-		rect: [36,1,67,33],
+		rect: [71,1,102,33],
+		frames:1,
+		frames_per_row: 1,
+		},
+		{
+		id: "crouch",
+		rect:[1,177,32,144],
 		frames:1,
 		frames_per_row: 1,
 		},
