--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -34,12 +34,6 @@
 		if ((ctrl_left and self.animation='crouch'),[ set(facing,-1)]),
 		
 		if ((ctrl_right and self.animation='crouch'),[ set(facing,1)]),
-//-------------------------------JUMPING---------------------------------			
-			if(ctrl_jump and is_standing and punch_finished, [  //check the animation changing back to 'walk' or 'stand' on jumping at a ledge and continuing to jump without the proper animation. 
-			if (animation != 'jump', set(animation, 'jump')),
-			set(velocity_y, -1000), //work on Miyamoto falling straight down upon walking off of an edge.
-			//add some x velocity to increase jump distance.
-			]),
 		//-------------------------------ATTACKING-------------------------------
 		if(ctrl_tongue and animation != 'punch1' and is_standing, 
 			if(punch_finished,
@@ -49,11 +43,21 @@
 				set(last_punched, dump(cycle)), //make it so that the player must press the attack button instead of holding it to repeat punching
 			])),
 	]",
-
-
+//-------------------------------JUMPING---------------------------------			
+on_ctrl_jump:"[if(is_standing and punch_finished, 
+					[  //check the animation changing back to 'walk' or 'stand' on jumping at a ledge and continuing to jump without the proper animation. 
+					debug('Jumping'),
+					if (animation != 'jump', set(animation, 'jump')),
+					set(velocity_y, -200), //work on Miyamoto falling straight down upon walking off of an edge.
+					//add some x velocity to increase jump distance.
+					]
+				),]",
+on_process_jump: "[debug('higher', velocity_y),if(ctrl_jump, add(velocity_y, -200))]",
 on_end_anim:"if(animation='punch1',if(is_standing, set(animation,'stand'),set(animation,'jump'), set(animation, 'crouch')),set(animation,animation))", //continues the animation
 on_end_crouch_anim:"if(not(ctrl_down),set(animation,'stand'))",
+on_end_jump_anim:"[debug('falling'), set(animation,'fall')]",
 on_end_enter_jump_anim:"set(animation,'jump')",
+on_collide_feet:"set(animation,'stand')",
 	
 	animation: [
 		{
@@ -88,6 +92,15 @@ on_end_enter_jump_anim:"set(animation,'jump')",
 		rect: [71,1,102,33],
 		frames:1,
 		frames_per_row: 1,
+		duration:5,
+		//we need to probably set the hitboxes or area to be smaller, or move the animation down to the feet somehow.
+		},
+		{
+		id: "fall",
+		rect: [71,1,102,33],
+		frames:1,
+		frames_per_row: 1,
+		//we need to probably set the hitboxes or area to be smaller, or move the animation down to the feet somehow.
 		},
 		{
 		id: "crouch",
