--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -6,12 +6,17 @@
 	zorder: 1,
 	editor_info: { category: "player" },
 	
+	
 	properties:{
+	
 		last_punched: {
 		type:"int",
 		default: 0,
 		},
 		punch_finished:"cycle - last_punched > 16",
+		max_jump: {type: "int", default: -800},
+		initial_jump: -600,
+		
 	},
 	on_process:"[
 		//------------------------------WALKING----------------------------------
@@ -47,17 +52,21 @@
 on_ctrl_jump:"[if(is_standing and punch_finished, 
 					[  //check the animation changing back to 'walk' or 'stand' on jumping at a ledge and continuing to jump without the proper animation. 
 					debug('Jumping'),
-					if (animation != 'jump', set(animation, 'jump')),
-					set(velocity_y, -200), //work on Miyamoto falling straight down upon walking off of an edge.
+					if (animation != ['jump','prejump','fall'], set(animation, 'prejump')),
+					set(velocity_y, initial_jump), //work on Miyamoto falling straight down upon walking off of an edge.
 					//add some x velocity to increase jump distance.
 					]
 				),]",
-on_process_jump: "[debug('higher', velocity_y),if(ctrl_jump, add(velocity_y, -200))]",
-on_end_anim:"if(animation='punch1',if(is_standing, set(animation,'stand'),set(animation,'jump'), set(animation, 'crouch')),set(animation,animation))", //continues the animation
+on_leave_prejump_anim: "[if(ctrl_jump, 
+					[set(velocity_y,max_jump)
+					])
+				]",
+on_enter_prejump_anim:"debug('entering jump')",
+on_end_anim:"if(animation='punch1',if(is_standing, set(animation,'stand'),set(animation,'jump'), set(animation, 'prejump'), set(animation, 'crouch')),set(animation,animation))", //continues the animation
 on_end_crouch_anim:"if(not(ctrl_down),set(animation,'stand'))",
 on_end_jump_anim:"[debug('falling'), set(animation,'fall')]",
-on_end_enter_jump_anim:"set(animation,'jump')",
-on_collide_feet:"set(animation,'stand')",
+on_end_prejump_anim:"set(animation,'jump')",
+on_collide_feet:"[set(animation,'stand'),set(velocity_x, 0),]",
 	
 	animation: [
 		{
@@ -82,17 +91,18 @@ on_collide_feet:"set(animation,'stand')",
 		duration: 12,
 		},
 		{
-		id: "enter_jump",
+		id: "prejump",
 		rect: [36,1,67,33],
 		frames:1,
 		frames_per_row: 1,
+		duration: 5,
 		},
 		{
 		id: "jump",
 		rect: [71,1,102,33],
 		frames:1,
 		frames_per_row: 1,
-		duration:5,
+		duration:1,
 		//we need to probably set the hitboxes or area to be smaller, or move the animation down to the feet somehow.
 		},
 		{
