Added crouch jump, flying kick.

--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -2,11 +2,15 @@
 	"air_resistance": 20,
 	"auto_move_camera": [0,0],
 	"character": {
-		"_addr": "02E297D0",
+		"_addr": "08FD4D90",
 		"current_frame": "normal",
 		"custom": 1,
 		"is_human": 1,
 		"label": "_1111",
+		"objects_destroyed": {
+			"level": "titlescreen.cfg",
+			"objects": []
+		},
 		"type": "miyamoto_playable",
 		"x": 224,
 		"y": 0,
@@ -31,10 +35,10 @@
 ,,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
 ,,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
 ,,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,dbr,dgr,,,,,,,,,,,,,dgr,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,dbr,dgr,,,,,dgr,,,,,,,,dgr,,,,,,,dgr,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,dbr,dgr,,,,,dgr,,,,,,,,dgr,,,dgr,,,,dgr,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,dbr,dgr,,,,,,,,,,,,,,dgr,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,dbr,dgr,,,,,,,,,dgr,,,,,dgr,,,,,,,dgr,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,dbr,dgr,,,,,,,,,dgr,,,,,dgr,,,,dgr,,,dgr,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
 ,,dbr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
 ,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
 ,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
