--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -14,8 +14,8 @@
 		default: 0,
 		},
 		punch_finished:"cycle - last_punched > 16",
-		max_jump: {type: "int", default: -800},
-		initial_jump: -600,
+		crouch_jump: {type: "int", default: -600},
+		standing_jump: -1000,
 		
 	},
 	on_process:"[
@@ -37,31 +37,36 @@
 			set(animation, 'crouch'),
 			set(velocity_x, 0)]),	
 		if ((ctrl_left and self.animation='crouch'),[ set(facing,-1)]),
-		
 		if ((ctrl_right and self.animation='crouch'),[ set(facing,1)]),
 		//-------------------------------ATTACKING-------------------------------
-		if(ctrl_tongue and animation != 'punch1' and is_standing, 
+		if(ctrl_tongue and animation != 'punch1' and is_standing and not animation in ['jump','fall'], 
 			if(punch_finished,
 				[set(animation, 'punch1'),
 				spawn('miyamoto_playable.punch_proj',mid_x+5*facing,mid_y-11,{facing:facing,velocity_x:1000*facing}),
 				set(velocity_x,0),
 				set(last_punched, dump(cycle)), //make it so that the player must press the attack button instead of holding it to repeat punching
 			])),
+		
+		if(ctrl_tongue and animation in ['jump','fall'],
+		set(animation, 'flying_kick'),
+		),
 	]",
 //-------------------------------JUMPING---------------------------------			
 on_ctrl_jump:"[if(is_standing and punch_finished, 
 					[  //check the animation changing back to 'walk' or 'stand' on jumping at a ledge and continuing to jump without the proper animation. 
-					debug('Jumping'),
+				
 					if (animation != ['jump','prejump','fall'], set(animation, 'prejump')),
-					set(velocity_y, initial_jump), //work on Miyamoto falling straight down upon walking off of an edge.
+					set(velocity_y, crouch_jump), //work on Miyamoto falling straight down upon walking off of an edge.
 					//add some x velocity to increase jump distance.
-					]
-				),]",
-on_leave_prejump_anim: "[if(ctrl_jump, 
-					[set(velocity_y,max_jump)
-					])
-				]",
+					if(self.animation in ['crouch'], 
+					set(velocity_y,crouch_jump), 
+				)])]",
+on_leave_prejump_anim: "[if(ctrl_jump and not ctrl_down, [set(velocity_y,standing_jump)])]",
 on_enter_prejump_anim:"debug('entering jump')",
+
+
+
+//---
 on_end_anim:"if(animation='punch1',if(is_standing, set(animation,'stand'),set(animation,'jump'), set(animation, 'prejump'), set(animation, 'crouch')),set(animation,animation))", //continues the animation
 on_end_crouch_anim:"if(not(ctrl_down),set(animation,'stand'))",
 on_end_jump_anim:"[debug('falling'), set(animation,'fall')]",
@@ -95,7 +100,7 @@ on_collide_feet:"[set(animation,'stand'),set(velocity_x, 0),]",
 		rect: [36,1,67,33],
 		frames:1,
 		frames_per_row: 1,
-		duration: 5,
+		duration: 4,
 		},
 		{
 		id: "jump",
@@ -114,17 +119,34 @@ on_collide_feet:"[set(animation,'stand'),set(velocity_x, 0),]",
 		},
 		{
 		id: "crouch",
-		rect:[1,177,32,144],
+		rect:[1,145,32,177],
 		frames:1,
 		frames_per_row: 1,
 		},
+		
+		//ATTACK ANIMATIONS*********************************
+		
 		{
 		id: "punch1",
-		rect: [1,73,32,105],
+		rect: [36,73,67,105],
 		frames:1,
 		frames_per_row: 1,
 		duration: 6,
 		},
+		{
+		id: "begin_punch",
+		rect: [1,73,32,105],
+		frames:1,
+		frames_per_row: 1,
+		duration: 2,
+		},
+		{
+		id: "flying_kick",
+    	rect: [176,1,207,33],
+		frames:1,
+		frames_per_row: 1,
+		duration: 1,
+		}
 	],
 	object_type: [{
 		id:"punch_proj",
