Tweaked jumping, added a neutral jump kick to replace the WIP flying kick.

--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -2,7 +2,7 @@
 	"air_resistance": 20,
 	"auto_move_camera": [0,0],
 	"character": {
-		"_addr": "08FD4D90",
+		"_addr": "0438B0C0",
 		"current_frame": "normal",
 		"custom": 1,
 		"is_human": 1,
@@ -16,7 +16,7 @@
 		"y": 0,
 		"zorder": 0
 	},
-	"dimensions": [0,0,1983,599],
+	"dimensions": [0,0,1983,767],
 	"id": "titlescreen.cfg",
 	"music": "",
 	"preloads": "",
@@ -39,12 +39,18 @@
 ,,dbr,dgr,,,,,,,,,,,,,,dgr,,,,,,,,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
 ,,dbr,dgr,,,,,,,,,dgr,,,,,dgr,,,,,,,dgr,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
 ,,dbr,dgr,,,,,,,,,dgr,,,,,dgr,,,,dgr,,,dgr,,,,,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
-,,dbr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
-,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
-,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
-,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
-,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
-,,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
+,,dbr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
+,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
+,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,dgr
+,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr
+,,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr
+,,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr
+,
+,
+,
+,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr
+,
 ,",
 		"unique_tiles": ",dbr,dgr",
 		"variations": "",
