--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -47,9 +47,10 @@
 				set(last_punched, dump(cycle)), //make it so that the player must press the attack button instead of holding it to repeat punching
 			])),
 		
-		if(ctrl_tongue and animation in ['jump','fall'],
-		set(animation, 'flying_kick'),
+		if(ctrl_tongue and animation in ['jump','fall'] and velocity_x = 0,
+		set(animation, 'jumping_kick'),
 		),
+		
 	]",
 //-------------------------------JUMPING---------------------------------			
 on_ctrl_jump:"[if(is_standing and punch_finished, 
@@ -100,14 +101,14 @@ on_collide_feet:"[set(animation,'stand'),set(velocity_x, 0),]",
 		rect: [36,1,67,33],
 		frames:1,
 		frames_per_row: 1,
-		duration: 4,
+		duration: 5,
 		},
 		{
 		id: "jump",
 		rect: [71,1,102,33],
 		frames:1,
 		frames_per_row: 1,
-		duration:1,
+		duration:80,
 		//we need to probably set the hitboxes or area to be smaller, or move the animation down to the feet somehow.
 		},
 		{
@@ -115,6 +116,7 @@ on_collide_feet:"[set(animation,'stand'),set(velocity_x, 0),]",
 		rect: [71,1,102,33],
 		frames:1,
 		frames_per_row: 1,
+		velocity_x: 0,
 		//we need to probably set the hitboxes or area to be smaller, or move the animation down to the feet somehow.
 		},
 		{
@@ -146,6 +148,14 @@ on_collide_feet:"[set(animation,'stand'),set(velocity_x, 0),]",
 		frames:1,
 		frames_per_row: 1,
 		duration: 1,
+		},
+		{
+		id: "jumping_kick",
+    	rect: [106,1,137,33],
+		frames:2,
+		frames_per_row: 2,
+		duration: 3,
+		repeat: false,
 		}
 	],
 	object_type: [{
