Added more boomerang frames; added skeleton for uppercut move

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -14,6 +14,7 @@
 		default: 0,
 		},
 		punch_finished:"cycle - last_punched > 16",
+		uppercut_finished:"cycle - last_punched > 32",
 		crouch_jump: {type: "int", default: -600},
 		standing_jump: -1000,
 		
@@ -46,6 +47,11 @@
 				set(velocity_x,0),
 				set(last_punched, dump(cycle)), //make it so that the player must press the attack button instead of holding it to repeat punching
 			])),
+		//if(ctrl_tongue and animation != 'uppercut' and is_standing and not animation in ['jump', 'fall'],
+			//if(uppercut_finished,
+				//[set(animation, 'uppercut'),
+				//set(last_punched, dump(cycle))],
+				//)),
 		
 		if(ctrl_tongue and animation in ['jump','fall'] and velocity_x = 0,
 		set(animation, 'jumping_kick'),
@@ -68,7 +74,7 @@ on_enter_prejump_anim:"debug('entering jump')",
 
 
 //---
-on_end_anim:"if(animation='punch1',if(is_standing, set(animation,'stand'),set(animation,'jump'), set(animation, 'prejump'), set(animation, 'crouch')),set(animation,animation))", //continues the animation
+on_end_anim:"if(animation='punch1', if(is_standing, set(animation,'stand'),set(animation,'jump'), set(animation, 'prejump'), set(animation, 'crouch')),set(animation,animation))", //continues the animation
 on_end_crouch_anim:"if(not(ctrl_down),set(animation,'stand'))",
 on_end_jump_anim:"[debug('falling'), set(animation,'fall')]",
 on_end_prejump_anim:"set(animation,'jump')",
@@ -130,17 +136,17 @@ on_collide_feet:"[set(animation,'stand'),set(velocity_x, 0),]",
 		
 		{
 		id: "punch1",
-		rect: [36,73,67,105],
-		frames:1,
-		frames_per_row: 1,
-		duration: 6,
+		rect: [1,73,32,105],
+		frames:2,
+		frames_per_row: 2,
+		duration: 4,
 		},
 		{
-		id: "begin_punch",
-		rect: [1,73,32,105],
-		frames:1,
-		frames_per_row: 1,
-		duration: 2,
+		id: "uppercut",
+		rect: [1,325,32,362],
+		frames:4,
+		frames_per_row: 4,
+		duration: 4,
 		},
 		{
 		id: "flying_kick",
