Fixed the infinite jumpkicks

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -53,11 +53,10 @@
 				//set(last_punched, dump(cycle))],
 				//)),
 		
-		if(ctrl_tongue and animation in ['jump','fall'] and velocity_x = 0,
-		set(animation, 'jumping_kick'),
-		),
-		
 	]",
+on_ctrl_tongue:"if(animation in ['jump','fall'] and velocity_x = 0,
+		set(animation, 'jumping_kick'))",
+		
 //-------------------------------JUMPING---------------------------------			
 on_ctrl_jump:"[if(is_standing and punch_finished, 
 					[  //check the animation changing back to 'walk' or 'stand' on jumping at a ledge and continuing to jump without the proper animation. 
@@ -78,6 +77,7 @@ on_end_anim:"if(animation='punch1', if(is_standing, set(animation,'stand'),set(a
 on_end_crouch_anim:"if(not(ctrl_down),set(animation,'stand'))",
 on_end_jump_anim:"[debug('falling'), set(animation,'fall')]",
 on_end_prejump_anim:"set(animation,'jump')",
+on_end_jumping_kick_anim:"set(animation,'fall')",
 on_collide_feet:"[set(animation,'stand'),set(velocity_x, 0),]",
 	
 	animation: [
