Added some placeholder lines to sort attacks for later.

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -54,10 +54,15 @@
 				//)),
 		
 		if(ctrl_tongue and animation in ['jump','fall'] and velocity_x = 0,
-		set(animation, 'jumping_kick'),
+		[set(animation, 'jumping_kick'),
+		set(last_punched, dump(cycle))],
 		),
 		
 	]",
+	
+			//-GROUND ATTACKS ****************************************************************************************
+			//-AERIAL ATTACKS ****************************************************************************************
+			//-BOOMERANG *********************************************************************************************
 //-------------------------------JUMPING---------------------------------			
 on_ctrl_jump:"[if(is_standing and punch_finished, 
 					[  //check the animation changing back to 'walk' or 'stand' on jumping at a ledge and continuing to jump without the proper animation. 
