Made the test enemy function.

--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -1,21 +1,33 @@
 {
 	"air_resistance": 20,
 	"auto_move_camera": [0,0],
-	"character": {
-		"_addr": "0465BC98",
-		"current_frame": "normal",
-		"custom": 1,
-		"is_human": 1,
-		"label": "_1111",
-		"objects_destroyed": {
-			"level": "titlescreen.cfg",
-			"objects": []
+	"character": [
+		{
+			"_addr": "08DA7DE8",
+			"current_frame": "normal",
+			"custom": 1,
+			"is_human": 1,
+			"label": "_1111",
+			"objects_destroyed": {
+				"level": "titlescreen.cfg",
+				"objects": []
+			},
+			"type": "miyamoto_playable",
+			"x": 224,
+			"y": 0,
+			"zorder": 0
 		},
-		"type": "miyamoto_playable",
-		"x": 224,
-		"y": 0,
-		"zorder": 0
-	},
+		{
+			"_addr": "04424810",
+			"current_frame": "normal",
+			"custom": 1,
+			"face_right": 0,
+			"label": "_7ffd",
+			"type": "test_enemy",
+			"x": 190,
+			"y": 309
+		}
+	],
 	"dimensions": [0,0,1983,767],
 	"id": "titlescreen.cfg",
 	"music": "",
