--- a/data/objects/enemies/test_enemy.cfg
+++ b/data/objects/enemies/test_enemy.cfg
@@ -11,7 +11,7 @@ DO NOT PLACE THIS ENEMY ON THE LEVEL. USE ENEMYB_SPAWNER INSTEAD
 */
 
 {
-id: "test_enemy.cfg",
+id: "test_enemy",
 editor_info: {category: "enemies"},
 prototype: ["enemy_ground"],
 
@@ -28,12 +28,11 @@ properties: {},
 	{
 		id: "idle",
 		image: "enemies/enemy.png",
-		rect: [3, 3, 81, 45],
-		solid_area: [30, 1, 47, 37],
+		rect: [1, 37, 32, 69],
+		solid_area: [1, 1, 31, 31],
 		body_area:[30, 1, 47, 37],
 		frames: 1,
 		"damage": 2,
-		pad: 3,
 		},
 		],
 
